fixed readablitity

--- a/src/Pages/AboutUs.css
+++ b/src/Pages/AboutUs.css
@@ -1,5 +1,13 @@
+.about {
+    display: flex;
+    height: 800pt;
+}
+
+.about__dogs {
+    display: flex;
+    height: 900pt;
+}
 .emma {
-    background-image: url("/src/images/emma.jpg");
     width: 550px;
     height: 550px;
     padding: 20pt;
@@ -10,7 +18,6 @@
 }
 
 .bandit {
-    background-image: url("/src/images/bandit2.jpeg");
     width: 450px;
     height: 650px;
     padding: 20pt;
@@ -21,7 +28,6 @@
 }
 
 .brandy {
-    background-image: url("/src/images/Brandie_Chris.jpeg");
     width: 400px;
     height: 450px;
     padding: 20pt;
@@ -32,7 +38,6 @@
 }
 
 .nick {
-    background-image: url("/src/images/nick.jpeg");
     width: 550px;
     height: 550px;
     padding: 20pt;
@@ -43,7 +48,6 @@
 }
 
 .dogs {
-    background-image: url("/src/images/bronco_bottles.jpg");
     width: 680px;
     height: 500px;
     padding: 20pt;
