--- a/src/Pages/Contact.css
+++ b/src/Pages/Contact.css
@@ -1,12 +1,12 @@
 .contact {
-    background-image: url("/src/images/bottles.jpg");
     padding: 20pt;
-    height: 750pt;
+    height: 1000pt;
     padding: 20pt;
     font-family:'Courier New', Courier, monospace;
     font-size: x-large;
     font-weight: bolder;
-    /* color: white; */
-    -webkit-text-stroke: 1px red;
-    justify-content: baseline;
+    color: crimson;
+    -webkit-text-stroke: 1px black;
+    border: 2px solid brown;
+    box-shadow: -15px 7px 1px brown;
 }
