--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -10,6 +10,8 @@
     font-size:3rem;
     padding-left: 100pt;
     font-family:'Courier New', Courier, monospace;
+    color: crimson;
+    -webkit-text-stroke: 1px black;
 }
 
 .header__buttons {
@@ -24,29 +26,26 @@
 }
 
 .processes {
-    background-image: url("/src/images/red_table.jpg");
-    /* width: 1450px; */
-    height: 1050px;
     padding: 20pt;
     font-family:'Courier New', Courier, monospace;
     font-size: x-large;
     font-weight: bolder;
-    color: white;
-    -webkit-text-stroke: 1px white;
-    justify-content: baseline;
+    color: crimson;
+    -webkit-text-stroke: 1px black;
+    border: 2px solid brown;
+    box-shadow: -15px 7px 1px brown;
 }
 
 .how__to {
-    background-image: url("/src/images/moonshining.jpeg");
     padding: 20pt;
-    /* width: 1400px; */
-    height: 1000px;
     font-family:'Courier New', Courier, monospace;
     font-size: x-large;
     font-weight: bolder;
     text-align:justify;
-    color: red;
-    justify-content: baseline;
+    color: crimson;
+    -webkit-text-stroke: 1px black;
+    border: 2px solid brown;
+    box-shadow: -15px 7px 1px brown;
 }
 
 .home__footer {
